--- a/site/index.html
+++ b/site/index.html
@@ -94,7 +94,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <nav class="wm-toc-pane">
   
   <ul class="wm-toctree">
-        <li class="wm-toc-li wm-toc-lev1 "><a href="" class="wm-article-link wm-toc-text">Home</a>
+        <li class="wm-toc-li wm-toc-lev1 "><a href="" class="wm-article-link wm-toc-text">Inicio</a>
 </li>
         <li class="wm-toc-li wm-toc-lev1 wm-toc-opener"><span class="wm-toc-text">Legislacion</span>
 </li>
@@ -103,6 +103,12 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
       <li class="wm-toc-li wm-toc-lev2 "><a href="leg/constitucion/" class="wm-article-link wm-toc-text">Constitución Española</a>
 </li>
       <li class="wm-toc-li wm-toc-lev2 "><a href="leg/lsp/" class="wm-article-link wm-toc-text">Ley de Seguridad Privada</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="leg/delitos/" class="wm-article-link wm-toc-text">Delitos</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="leg/informes/" class="wm-article-link wm-toc-text">Informes</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="leg/cp/" class="wm-article-link wm-toc-text">Reforma Codigo Penal</a>
 </li>
       <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">Protección de datos</span>
 </li>
@@ -123,6 +129,15 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <li class="wm-toc-li-nested collapse">
   <ul class="wm-toctree">
       <li class="wm-toc-li wm-toc-lev2 "><a href="juris/costas/" class="wm-article-link wm-toc-text">Costas</a>
+</li>
+  </ul>
+</li>
+
+        <li class="wm-toc-li wm-toc-lev1 wm-toc-opener"><span class="wm-toc-text">OSINT</span>
+</li>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev2 "><a href="https://osintframework.com/" class="wm-article-link wm-toc-text">Framework</a>
 </li>
   </ul>
 </li>
@@ -208,5 +223,5 @@ docs/
 </html>
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-05-16 18:59:52.353329+00:00
+Build Date UTC : 2021-05-17 11:43:13.430674+00:00
 -->
